src/test/ui/generic-associated-types/issue-78671.extended.stderr
error[E0107]: missing generics for associated type `CollectionFamily::Member`
  --> $DIR/issue-78671.rs:10:47
   |
LL |     Box::new(Family) as &dyn CollectionFamily<Member=usize>
   |                                               ^^^^^^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `T`
  --> $DIR/issue-78671.rs:7:10
   |
LL |     type Member<T>;
   |          ^^^^^^ -
help: add missing generic argument
   |
LL |     Box::new(Family) as &dyn CollectionFamily<Member<T>=usize>
   |                                               ~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
